<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Installer Codex</string>
    <string name="app_title">Installer Codex</string>
    <string name="refresh_status">Refresh Status</string>
    <string name="use_selected">Use Selected</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="new_chat">New Chat</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="start_login">Start Codex Login</string>
    <string name="open_browser">Open Browser</string>
    <string name="copy_code">Copy Code</string>
    <string name="send">Send</string>
    <string name="message_hint">Ask Codex something...</string>
    <string name="logout_switch">Log Out / Switch Account</string>
    <string name="active_server_fmt">Active server: %1$s</string>
    <string name="active_server_default">Active server: Connecting...</string>
    <string name="availability_fmt">Availability: %1$s</string>
    <string name="availability_default">Availability: -</string>
    <string name="summary_fmt">Summary: %1$s</string>
    <string name="summary_default">Summary: -</string>
    <string name="login_state_fmt">Login state: %1$s</string>
    <string name="login_state_default">Login state: -</string>
    <string name="device_code_fmt">Device code: %1$s</string>
    <string name="device_code_default">Device code: -</string>
    <string name="login_url_fmt">Login URL: %1$s</string>
    <string name="login_url_default">Login URL: -</string>
</resources>
